<resources>
    <string name="app_name">Rick y Morty app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"¡Bienvenido! "</string>
    <string name="invalid_username">Correo inválido</string>
    <string name="invalid_password">La contraseña debe ser mínimo de 6 dígitos</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Registrarse</string>
    <!-- Preference Titles -->
    <string name="messages_header">Ajustes</string>
    <string name="sync_header">Idioma</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Tema</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo electrónico</string>
    <string name="registrarse">Registrarse</string>
    <string name="volver_al_login">Volver al Login</string>
    <string name="contrase_a">Contraseña</string>
    <string name="acerca_de">Acerca de</string>
    <string name="ajustes">Ajustes</string>
    <string name="men_lateral">Menú Lateral</string>
    <string name="episodios">Episodios</string>
    <string name="estad_sticas">Estadísticas</string>
    <string name="escribe_email_y_contrase_a">Escribe email y contraseña</string>
    <string name="error_de_navegaci_n">Error de navegación</string>
    <string name="error_nav_no_encuentro_blankfragment">Error Nav: No encuentro blankFragment</string>
</resources>